...
}

// MARK: - Preview
#if DEBUG
struct ARSessionStatusView_Previews: PreviewProvider {
    static var previews: some View {
        ARSessionStatusView(sessionManager: ARSessionManager())
            .padding()
            .previewLayout(.sizeThatFits)
    }
}
#endif
